<resources>
    <string name="app_name">World\'s Country - Flags Quiz</string>

    <string name="countryToFlag">Country >> Flag</string>
    <string name="flagToCountry">Flag >> Country</string>
    <string name="exitApp">Exit</string>
    <string name="submit">Submit</string>
    <string name="quizType">Quiz Type</string>
    <string name="ocean">Ocean</string>
    <string name="itemPosition">ItemPosition</string>
    <string name="nextQuestion">Next Question</string>
    <string name="home">Home</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="rapidFire">Rapid Fire</string>
    <string name="highScores">High Scores</string>
    <string name="totalScore">Total Score: </string>
    <string name="timeIsUp">Time\'s Up</string>
    <string name="fullHouse">Full House !!!</string>
    <string name="gotItWrong">Man! You got this one wrong ..</string>
    <string name="anotherShot">Do you wanna give yourself another shot ?</string>
    <string name="competeWithYourself">Do you wanna beat your own score ?</string>
    <string name="name">Name</string>
    <string name="cancel">Cancel</string>
    <string name="highScoreValues">High Score Values</string>
    <string name="highScoreNames">High Score Names</string>
    <string name="start">Start</string>
    <string name="submitAndStart">Submit and Start</string>
    <string name="score">Score</string>
    <string name="serialNumber">Sr. No.</string>
    <string name="nextQuestionIn">Next Question In:</string>
    <string name="scoredHighScore">You\'ve just scored High Score !! \nEnter your name ..</string>
    <string name="getRating">Rating</string>
    <string name="rateUs">Rate Us !!</string>
    <string name="feedBack">You are important to us. Please provide your valuable feedback.</string>
    <string name="rateNow">Rate Now</string>
    <string name="rateLater">Rate Later</string>
    <string name="noHighScore">No High Score till now. \nPlay Rapid Fire to set a new High Score !!</string>
    <string name="ok">OK</string>
    <string name="interstitial_ad_unit_id">ca-app-pub-2351441944226667/7158524633</string>
    <string name="displayInterstitialAd">Is Interstitial Ad Displayed ?</string>
    <string name="displayInterstitialAdCTF">Is Displayed ?</string>
    <string name="quitGame">Quit Game !</string>
    <string name="sureToQuitGame">Are you sure you want to quit the game ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="unityId">1341067</string>
    <string name="isUnityDisplay">Unity Ads Display</string>
    <string name="isVolumeEnabled">Is Volume Enabled</string>
    <string name="isRatingProvided">Rating is already been given</string>
    <string name="shareApplicationString">Check out this cool World\'s Country - Flag Quiz to learn flags from all the world at: https://play.google.com/store/apps/details?id=</string>

    <string-array name="win">
        <item>Voila !!</item>
        <item>Coool !!</item>
        <item>Correct !!</item>
        <item>Flawless !!</item>
        <item>Perfect !!</item>
    </string-array>

    <string-array name="africa_flag_list">
        <item>Algeria</item>
        <item>Angola</item>
        <item>Burkina Faso</item>
        <item>Burundi</item>
        <item>Cameroon</item>
        <item>Cape Verde</item>
        <item>Central African Republic</item>
        <item>Chad</item>
        <item>Comoros</item>
        <item>Cote D\'Ivoire</item>
        <item>Democratic Republic of the Congo</item>
        <item>Djibouti</item>
        <item>Egypt</item>
        <item>Equatorial Guinea</item>
        <item>Eritrea</item>
        <item>Ethiopia</item>
        <item>Gabon</item>
        <item>Gambia</item>
        <item>Ghana</item>
        <item>Guinea</item>
        <item>Guinea Bissau</item>
        <item>Kenya</item>
        <item>Lesotho</item>
        <item>Liberia</item>
        <item>Libya</item>
        <item>Madagascar</item>
        <item>Malawi</item>
        <item>Mali</item>
        <item>Mauritania</item>
        <item>Mauritius</item>
        <item>Morocco</item>
        <item>Mozambique</item>
        <item>Namibia</item>
        <item>Niger</item>
        <item>Nigeria</item>
        <item>Congo</item>
        <item>Rwanda</item>
        <item>Sao Tome and Principe</item>
        <item>Senegal</item>
        <item>Seychelles</item>
        <item>Sierra Leone</item>
        <item>Somalia</item>
        <item>South Sudan</item>
        <item>South Africa</item>
        <item>Sudan</item>
        <item>Swaziland</item>
        <item>Tanzania</item>
        <item>Togo</item>
        <item>Tunisia</item>
        <item>Uganda</item>
        <item>Zambia</item>
        <item>Zimbabwe</item>
    </string-array>

    <string-array name="asia_flag_list">
        <item>Afghanistan</item>
        <item>Armenia</item>
        <item>Azerbaijan</item>
        <item>Bahrain</item>
        <item>Bangladesh</item>
        <item>Bhutan</item>
        <item>Brunei</item>
        <item>Cambodia</item>
        <item>China</item>
        <item>Cyprus</item>
        <item>India</item>
        <item>Indonesia</item>
        <item>Iran</item>
        <item>Iraq</item>
        <item>Israel</item>
        <item>Japan</item>
        <item>Jordan</item>
        <item>Kazakhstan</item>
        <item>Kuwait</item>
        <item>Kyrgyzstan</item>
        <item>Laos</item>
        <item>Lebanon</item>
        <item>Malaysia</item>
        <item>Maldives</item>
        <item>Mongolia</item>
        <item>Myanmar</item>
        <item>Nepal</item>
        <item>North Korea</item>
        <item>Oman</item>
        <item>Pakistan</item>
        <item>Philippines</item>
        <item>Qatar</item>
        <item>Russia</item>
        <item>Saudi Arabia</item>
        <item>Singapore</item>
        <item>South Korea</item>
        <item>Sri Lanka</item>
        <item>Syria</item>
        <item>Taiwan</item>
        <item>Tajikistan</item>
        <item>Thailand</item>
        <item>Turkey</item>
        <item>Turkmenistan</item>
        <item>United Arab Emirates</item>
        <item>Vietnam</item>
        <item>Yemen</item>
    </string-array>

    <string-array name="europe_flag_list">
        <item>Albania</item>
        <item>Andorra</item>
        <item>Austria</item>
        <item>Belarus</item>
        <item>Belgium</item>
        <item>Bosnia and Herzegovina</item>
        <item>Botswana</item>
        <item>Bulgaria</item>
        <item>Croatia</item>
        <item>Czech Republic</item>
        <item>Denmark</item>
        <item>Estonia</item>
        <item>Finland</item>
        <item>France</item>
        <item>Georgia</item>
        <item>Germany</item>
        <item>Greece</item>
        <item>Hungary</item>
        <item>Iceland</item>
        <item>Ireland</item>
        <item>Italy</item>
        <item>Kosovo</item>
        <item>Latvia</item>
        <item>Liechtenstein</item>
        <item>Lithuania</item>
        <item>Luxembourg</item>
        <item>Macedonia</item>
        <item>Malta</item>
        <item>Moldova</item>
        <item>Monaco</item>
        <item>Montenegro</item>
        <item>Netherlands</item>
        <item>Norway</item>
        <item>Poland</item>
        <item>Portugal</item>
        <item>Romania</item>
        <item>San Marino</item>
        <item>Serbia</item>
        <item>Slovakia</item>
        <item>Slovenia</item>
        <item>Spain</item>
        <item>Sweden</item>
        <item>Switzerland</item>
        <item>Ukraine</item>
        <item>United Kingdom</item>
        <item>Vatican City</item>
    </string-array>

    <string-array name="north_america_flag_list">
        <item>Antigua and Barbuda</item>
        <item>Bahamas</item>
        <item>Barbados</item>
        <item>Belize</item>
        <item>Canada</item>
        <item>Costa Rica</item>
        <item>Cuba</item>
        <item>Dominica</item>
        <item>El Salvador</item>
        <item>Grenada</item>
        <item>Guatemala</item>
        <item>Haiti</item>
        <item>Honduras</item>
        <item>Jamaica</item>
        <item>Mexico</item>
        <item>Nicaragua</item>
        <item>Saint Kitts and Nevis</item>
        <item>United States of America</item>
    </string-array>

    <string-array name="oceania_flag_list">
        <item>Australia</item>
        <item>East Timor</item>
        <item>Fiji</item>
        <item>Kiribati</item>
        <item>Marshall Islands</item>
        <item>Micronesia</item>
        <item>Nauru</item>
        <item>New Zealand</item>
        <item>Niue</item>
        <item>Palau</item>
        <item>Papua New Guinea</item>
        <item>Samoa</item>
        <item>Solomon Islands</item>
        <item>Tonga</item>
        <item>Tuvalu</item>
    </string-array>

    <string-array name="south_america_flag_list">
        <item>Argentina</item>
        <item>Bolivia</item>
        <item>Brazil</item>
        <item>Chile</item>
        <item>Colombia</item>
        <item>Dominican Republic</item>
        <item>Ecuador</item>
        <item>Guyana</item>
        <item>Panama</item>
        <item>Paraguay</item>
        <item>Peru</item>
        <item>Saint Lucia</item>
        <item>Saint Vincent and the Grenadines</item>
        <item>Suriname</item>
        <item>Trinidad and Tobago</item>
        <item>Uruguay</item>
        <item>Venezuela</item>
    </string-array>

    <string-array name="oceanList">
        <item>Africa</item>
        <item>Asia</item>
        <item>Europe</item>
        <item>North America</item>
        <item>Oceania</item>
        <item>South America</item>
    </string-array>

    <integer-array name="oceanFlagQuantity">
        <item>52</item>
        <item>46</item>
        <item>46</item>
        <item>18</item>
        <item>15</item>
        <item>17</item>
    </integer-array>

</resources>
