<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activityBackground">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="4">

        <ImageView
            android:layout_marginRight="@dimen/activity_horizontal_margin_into_two"
            android:layout_marginLeft="@dimen/activity_horizontal_margin_into_two"
            android:layout_marginTop="@dimen/activity_horizontal_margin_into_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:id="@+id/countryFlag"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>
    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/activity_horizontal_margin_into_two" >

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/optionOne"
            android:textSize="@dimen/quizMainTextSize"
            android:textStyle="bold"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/optionTwo"
            android:textSize="@dimen/quizMainTextSize"
            android:textStyle="bold"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/optionThree"
            android:textSize="@dimen/quizMainTextSize"
            android:textStyle="bold"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/optionFour"
            android:textSize="@dimen/quizMainTextSize"
            android:textStyle="bold"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/newText">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/countryToFlag"
            android:textColor="@android:color/white"
            android:textAlignment="center"
            android:textSize="@dimen/mainText"
            android:visibility="invisible"
            android:id="@+id/win"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bottomButton"
        android:layout_weight="5">

        <Space
            android:layout_width="10dp"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:id="@+id/centreSpace"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/previous"
            android:drawableStart="@drawable/ic_fast_rewind_black_24dp"
            android:drawableLeft="@drawable/ic_fast_rewind_black_24dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:text="@string/previous"
            android:layout_margin="10dp"
            android:paddingEnd="10dp"
            android:paddingRight="10dp"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:layout_toLeftOf="@id/centreSpace"
            android:layout_toStartOf="@id/centreSpace"
            android:clickable="true"
            android:textStyle="bold"
            android:textSize="@dimen/quizMainTextSize"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/next"
            android:drawableEnd="@drawable/ic_fast_forward_black_24dp"
            android:drawableRight="@drawable/ic_fast_forward_black_24dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:text="@string/next"
            android:layout_margin="10dp"
            android:paddingEnd="10dp"
            android:paddingRight="10dp"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:layout_toEndOf="@id/centreSpace"
            android:layout_toRightOf="@id/centreSpace"
            android:clickable="true"
            android:textStyle="bold"
            android:textSize="@dimen/quizMainTextSize"/>

    </RelativeLayout>

</LinearLayout>