<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/activityBackground">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="56">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/countryToFlagQuestionText"
            android:gravity="bottom"
            android:textColor="@android:color/white"
            android:layout_centerInParent="true"
            android:id="@+id/questionCountryName"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="26"
        android:layout_marginTop="@dimen/negativeDimension"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/optionOneMain"
                android:clickable="true"
                android:layout_margin="@dimen/countryToFlagPadding"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/optionTwoMain"
                android:clickable="true"
                android:layout_margin="@dimen/countryToFlagPadding"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/optionThreeMain"
                android:clickable="true"
                android:layout_margin="@dimen/countryToFlagPadding"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/optionFourMain"
                android:clickable="true"
                android:layout_margin="@dimen/countryToFlagPadding"/>

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/newTextCTF">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/countryToFlag"
            android:textColor="@android:color/white"
            android:textAlignment="center"
            android:textSize="@dimen/mainText"
            android:visibility="invisible"
            android:id="@+id/winCTF"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bottomButtonCTF"
        android:layout_weight="54">

        <Space
            android:layout_width="10dp"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:id="@+id/centreSpaceCTF"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/previousCTF"
            android:drawableStart="@drawable/ic_fast_rewind_black_24dp"
            android:drawableLeft="@drawable/ic_fast_rewind_black_24dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:text="@string/previous"
            android:layout_margin="10dp"
            android:paddingEnd="10dp"
            android:paddingRight="10dp"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:layout_toLeftOf="@id/centreSpaceCTF"
            android:layout_toStartOf="@id/centreSpaceCTF"
            android:textSize="@dimen/quizMainTextSize"
            android:textStyle="bold"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/nextCTF"
            android:drawableEnd="@drawable/ic_fast_forward_black_24dp"
            android:drawableRight="@drawable/ic_fast_forward_black_24dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:text="@string/next"
            android:layout_margin="10dp"
            android:paddingEnd="10dp"
            android:paddingRight="10dp"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:layout_toEndOf="@id/centreSpaceCTF"
            android:layout_toRightOf="@id/centreSpaceCTF"
            android:textSize="@dimen/quizMainTextSize"
            android:textStyle="bold"/>

    </RelativeLayout>

</LinearLayout>